# gaussian_kde

./: .gitignore  Cargo.toml  Readme.md
benches/: tth.rs
examples/: tth.npy  tth.py  tth.rs
src/: bandwidth.rs  cholesky.rs  docs-header.html  error.rs  eval.rs  lib.rs  sample.rs
