[package]
name = "gaussian_kde"
authors = ["Jens Braun <j.braun@kit.edu>"]
version = "0.1.0"
edition = "2024"
description = "Multivariate kernel density estimation with Gaussian kernels and optionally weighed data points."
rust-version = "1.85"
license = "MPL-2.0"
repository = "https://github.com/jens-braun/gaussian_kde"
documentation = "https://docs.rs/gaussian_kde"

exclude = ["benches", "examples"]

keywords = ["kde", "kernel-density", "probability", "density-estimation"]
categories = ["science", "mathematics"]

[dependencies]
ndarray = "0.17.2"
num-traits = "0.2.19"

# RNG to sample from the KDE density
rand = { version = "0.9.2", optional = true, default-features = false, features = ["std"] }
rand_core = { version = "0.9.5", optional = true, features = ["os_rng"]}
rand_distr = { version = "0.5.1", optional = true }
rand_pcg = { version = "0.9.0", optional = true }

[features]
default = ["sample"]
sample = ["dep:rand", "dep:rand_distr", "dep:rand_pcg", "dep:rand_core"]

[dev-dependencies]
approx = "0.5"
ndarray-npy = "0.10"
criterion = { version = "0.8", default-features = false, features = ["cargo_bench_support"] }

[[example]]
name = "tth"

[[bench]]
name = "tth"
harness = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs", "--html-in-header", "./src/docs-header.html"]

[profile.profiling]
inherits = "release"
debug = true
